// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render dashboard 295 gapDegree 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0.3097094374405742px 295.3097094374406px; stroke-dashoffset: -147.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -147.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; transition-duration: .3s, .3s, .3s, .06s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard 296 gapDegree 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: -0.6902905625594258px 295.3097094374406px; stroke-dashoffset: -148px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -148px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; transition-duration: .3s, .3s, .3s, .06s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard zero gapDegree 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; transition-duration: .3s, .3s, .3s, .06s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render format 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 50%; height: 8px;"
      />
      <div
        class="ant-progress-success-bg"
        style="width: 10%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="50 10"
  >
    50 10
  </span>
</div>
`;

exports[`Progress render negative progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render negative successPercent 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 50%; height: 8px;"
      />
      <div
        class="ant-progress-success-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="50%"
  >
    50%
  </span>
</div>
`;

exports[`Progress render normal progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 100%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 100%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Progress render strokeColor 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: red; stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; transition-duration: .3s, .3s, .3s, .06s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 2`] = `
<Progress
  percent={50}
  showInfo={true}
  size="default"
  strokeColor={
    Object {
      "from": "#108ee9",
      "to": "#87d068",
    }
  }
  strokeLinecap="round"
  trailColor={null}
  type="line"
>
  <div
    className="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <Line
      percent={50}
      prefixCls="ant-progress"
      showInfo={true}
      size="default"
      strokeColor={
        Object {
          "from": "#108ee9",
          "to": "#87d068",
        }
      }
      strokeLinecap="round"
      trailColor={null}
      type="line"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "backgroundImage": "linear-gradient(to right, #108ee9, #87d068)",
                "borderRadius": "",
                "height": 8,
                "width": "50%",
              }
            }
          />
        </div>
      </div>
      <span
        className="ant-progress-text"
        title="50%"
      >
        50%
      </span>
    </Line>
  </div>
</Progress>
`;

exports[`Progress render strokeColor 3`] = `
<Progress
  percent={50}
  showInfo={true}
  size="default"
  strokeColor={
    Object {
      "0%": "#108ee9",
      "100%": "#87d068",
    }
  }
  strokeLinecap="round"
  trailColor={null}
  type="line"
>
  <div
    className="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <Line
      percent={50}
      prefixCls="ant-progress"
      showInfo={true}
      size="default"
      strokeColor={
        Object {
          "0%": "#108ee9",
          "100%": "#87d068",
        }
      }
      strokeLinecap="round"
      trailColor={null}
      type="line"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "backgroundImage": "linear-gradient(to right, #108ee9 0%, #87d068 100%)",
                "borderRadius": "",
                "height": 8,
                "width": "50%",
              }
            }
          />
        </div>
      </div>
      <span
        className="ant-progress-text"
        title="50%"
      >
        50%
      </span>
    </Line>
  </div>
</Progress>
`;

exports[`Progress render successColor progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 60%; height: 8px;"
      />
      <div
        class="ant-progress-success-bg"
        style="width: 30%; height: 8px; background-color: rgb(255, 255, 255);"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="60%"
  >
    60%
  </span>
</div>
`;

exports[`Progress render trailColor progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default ant-progress-rtl"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width:0%;height:8px;border-radius:"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress should support steps 1`] = `
<div
  class="ant-progress ant-progress-steps ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-steps-outer"
  >
    <div
      class="ant-progress-steps-item"
      style="width:14px;height:8px"
    />
    <div
      class="ant-progress-steps-item"
      style="width:14px;height:8px"
    />
    <div
      class="ant-progress-steps-item"
      style="width:14px;height:8px"
    />
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress steps should have default percent 0 1`] = `
<div
  class="undefined-steps-outer"
/>
`;
